# Nihilox

./: .clang-format  .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  README.md  TODO.md
.github/workflows/: coverage.yml  test.yml
examples/: main.nox
src/: ast.h  ast.rs  lexer.cpp  lexer.h  lexer.rs  main.cpp  main.rs  parser.rs  token_iterator.h
src/parse/: ast.h  parser.cpp  parser.h  pretty_print.cpp  pretty_print.h
test/: CMakeLists.txt  expressionTest.cpp  lexerTest.cpp
